--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,20 +1,20 @@
 Package: binr
-Title: Cut Numeric Values Into Evenly Distributed Groups
-Version: 1.0
+Title: Cut Numeric Values into Evenly Distributed Groups
+Version: 1.1
 Author: Sergei Izrailev
-Maintainer: Sergei Izrailev <sizrailev@collective.com>
-Description: This package provides algorithms for cutting numerical values
+Maintainer: Sergei Izrailev <sizrailev@jabiruventures.com>
+Description: Implementation of algorithms for cutting numerical values
     exhibiting a potentially highly skewed distribution into evenly distributed
     groups (bins). This functionality can be applied for binning discrete
     values, such as counts, as well as for discretization of continuous values,
     for example, during generation of features used in machine learning
     algorithms.
-URL: http://github.com/collectivemedia/binr
-Depends: R (>= 3.0.3),
+URL: http://github.com/jabiru/binr
+Depends: R (>= 2.15),
 License: Apache License (== 2.0)
 Copyright: Copyright (C) Collective, Inc. | file inst/COPYRIGHTS
 LazyData: true
-Packaged: 2014-07-03 02:23:10 UTC; sizrailev
+Packaged: 2015-03-10 18:32:18 UTC; sergei
 NeedsCompilation: no
 Repository: CRAN
-Date/Publication: 2014-07-03 09:12:19
+Date/Publication: 2015-03-10 19:47:32
